# explicitag

./: Cargo.toml  README.md
.github/workflows/: dotnet.yml  release.yml  release.yml.disabled
ExpliciTag/: ExpliciTag.csproj  ExplicitWords.txt
src/: ExpliciTag.sln  dotnet-releaser.toml  main.rs
src/ExpliciTag/: ExpliciTag.csproj  Program.cs
