[package]
name = "explicitag"
version = "0.1.2"
authors = ["frosty <inthishouseofcards@gmail.com>"]
edition = "2021"
description = "An automatic MP4 rating tagger based on embedded lyrics."
readme = "README.md"
repository = "https://github.com/st0rm1wndz/explicitag"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
mp4ameta = "0.11.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "io-util"] }
walkdir = "2.4.0"
